# shtuka

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASING.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/shtuka-core/: Cargo.toml
crates/shtuka-core/src/: docx.rs  excel.rs  folder.rs  lib.rs  myers.rs  pdf.rs  rtf.rs  text.rs  track.rs  xml.rs
crates/shtuka-core/tests/: pdf_sample.rs
dist-windows/: README.txt
frontend/: index.html  package-lock.json  package.json  package.json.md5  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  tree.ts  types.ts
frontend/src/components/: About.tsx  BugReport.tsx  CompareFiles.tsx  DiffView.tsx  DualTree.tsx  ExcelDiffPane.tsx  FilePicker.tsx  FolderPicker.tsx  PdfPagesView.tsx  RtfDiffView.tsx  Toolbar.tsx  TrackView.tsx  UpdateChecker.tsx  VarHistoryView.tsx  XmlDiffView.tsx  Zoom.tsx
frontend/wailsjs/go/main/: App.d.ts  App.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: README.md
src-tauri/src/: lib.rs  main.rs
