[package]
name = "shtuka"
version = "0.2.0"
edition = "2021"
description = "Format-aware diff tool"
authors = ["shtuka contributors"]
license = "MIT"
default-run = "shtuka"

[lib]
name = "shtuka_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shtuka-core = { path = "../crates/shtuka-core" }

[features]
# This feature is used for production builds where `devUrl` is not used.
custom-protocol = ["tauri/custom-protocol"]
