[package]
name = "shtuka"
version = "0.4.2"
edition = "2021"
description = "Format-aware diff tool"
authors = ["Jimmy Yang"]
license = "MIT"
default-run = "shtuka"

[lib]
name = "shtuka_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
# In-app updates from GitHub releases (verified against the bundled public key).
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Open external URLs (the About dialog's repo links) in the system browser.
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shtuka-core = { path = "../crates/shtuka-core" }

[features]
# This feature is used for production builds where `devUrl` is not used.
custom-protocol = ["tauri/custom-protocol"]
