[package]
name = "shtuka-core"
version = "0.2.0"
edition = "2021"
description = "Format-aware diff engine for shtuka"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
walkdir = "2"
calamine = "0.26"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.36"
# Runtime-dynamic pdfium binding: links nothing at build time (uses libloading),
# so cross-compiling to windows-gnullvm is unaffected. The pdfium.dll / libpdfium.so
# is loaded at runtime from next to the exe (or PDFIUM_LIB_PATH). Pin pdfium_6666..
# range via pdfium_latest; ship a matching bblanchon build (chromium/7763).
pdfium-render = { version = "0.9.2", default-features = false, features = ["pdfium_latest", "thread_safe"] }
png = "0.17"

[dev-dependencies]
