[package]
name = "shtuka-core"
version = "0.3.1"
edition = "2021"
description = "Clinical trial document diff — CDISC adapter + app features built on tate + mumford"
license = "MIT"

[dependencies]
tate = "0.3.2"
mumford = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
walkdir = "2"
rayon = "1"
calamine = { version = "0.26", features = ["dates"] }
roxmltree = "0.20"

[dev-dependencies]